syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc IncrementCount (google.protobuf.Empty) returns (CounterReply);
  rpc AccumulateCount (stream CounterRequest) returns (CounterReply);
  rpc Countdown (google.protobuf.Empty) returns (stream CounterReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CounterRequest {
  int32 count = 1;
}

message CounterReply {
  int32 count = 1;
}